--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
     </head>
 
     <body style="margin: 0; overflow: hidden;">
         <a-scene
-            renderer="logarithmicDepthBuffer: true;"
-            embedded
+            vr-mode-ui="enabled: false;"
             loading-screen="enabled: false;"
-            arjs="sourceType: webcam; debugUIEnabled: false;"
+            renderer="logarithmicDepthBuffer: true;"
+            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+            id="scene"
+            embedded
+            gesture-detector
         >
             <a-assets>
                 <a-asset-item
@@ -23,15 +25,27 @@
                 ></a-asset-item>
             </a-assets>
 
+            <a-marker
+                id="animated-marker"
+                type="pattern"
+                preset="custom"
+                url="marker.patt"
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="markerA"
+            >
                 <a-entity
-                    look-at="[gps-camera]"
+                    id="bowser-model"
+                    scale="0.5867682673280573 0.5867682673280573 0.5867682673280573"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="0.5867682673280573 0.5867682673280573 0.5867682673280573"
-                    gps-entity-place="latitude: 19.29918214180931; longitude: 72.8729740226616;"
+                    class="clickable"
+                    gesture-handler
                 ></a-entity>
+            </a-marker>
 
-            <a-camera gps-camera rotation-reader></a-camera>
+            <a-entity camera></a-entity>
         </a-scene>
     </body>
 </html>
