--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             >
                 <a-entity
                     id="bowser-model"
-                    scale="10.5867682673280573 10.5867682673280573 10.5867682673280573"
-                    animation-mixer="loop: repeat"
+                    scale="100.5 100.5 100.5"
+                    animation-mixer="loop: 1"
                     gltf-model="#animated-asset"
                     class="clickable"
                     gesture-handler
